# utility-agents

./: .env.example  .gitignore  README.md  pyproject.toml
billing_investigator/: __init__.py  core.py  hypothesis_framework.py  output_formatting.py  prompts.py
billing_investigator/support/bigquery_loader/: configure_table_partitioning.py  create_bigquery_table.py  load_data_to_bigquery.py  setup_all.py  setup_bigquery_dataset.py  validate_bigquery_performance.py  verify_iam_permissions.py
billing_investigator/support/data_generators/: SCHEMA.md  anomaly_injector.py  consumption_patterns.py  csv_exporter.py  customer_profiles.py  load_disaggregation.py  schema.py
billing_investigator/tools/: __init__.py  analysis_tools.py  bigquery_tools.py
